# Rutam

./: README.md
backend/: docker-compose.yml  inspect2.py  pyproject.toml  test_endpoint.py  verify.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_no_network_zones.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: checklist.py  crisis.py  geodata.py  health.py  routes.py  search.py  trips.py
backend/app/core/: config.py  db.py
backend/app/db/: init_db.py
backend/app/engines/: audit.py  confidence.py  llm_advisor.py  scoring.py
backend/app/models/: constitution.py  spatial.py
backend/app/schemas/: routes.py
backend/app/scripts/: seed_zones.py
backend/audit_fallback/: rt_ktm_pkr_01_93dfab5d8d4d0ac14c10b21616572209e35409ebd6f73e4ae787e85c782d25d7.json
backend/data/admin/: nepal_districts.geojson  nepal_local_units.geojson
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/map/: MapView.tsx
frontend/src/components/ui/: CrisisPanel.tsx  ExplorerDrawer.tsx  GISToolbar.tsx  LandingPage.tsx  LayerControlPanel.tsx  SearchFilterPanel.tsx  SidePanel.tsx  TripInputPanel.tsx
frontend/src/data/routes/: ktm_pokhara.json
frontend/src/hooks/: useChecklist.ts  useGISTools.ts
frontend/src/store/: useTripStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: mapRef.ts
