[tool.poetry]
name = "rutam-backend"
version = "0.1.0"
description = "Rutam FastAPI Backend"
authors = ["AI <ai@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
sqlmodel = "^0.0.38"
geoalchemy2 = "^0.19.0"
alembic = "^1.18.4"
psycopg2-binary = "^2.9.12"
shapely = "^2.1.2"
google-generativeai = "^0.8.6"
boto3 = "^1.43.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
